fixed padding on small size for logo

--- a/_sass/_xs_size.scss
+++ b/_sass/_xs_size.scss
@@ -62,8 +62,11 @@ p {
 }
 
 #home-logo{
-    width: 10em;
-    position: absolute;
+    width: 35%;
+    max-width: 10em;
+    margin: 0 auto;
+    padding-top: 1rem;
+
     img {
         width: 100%;
     }
@@ -76,7 +79,7 @@ p {
 
     #siteTitle {
         color: $white;
-        padding: 10rem 0 0 0;
+        padding: 1rem 0 0 0;
         margin: 0;
         font-size: 3rem;
         text-align: center;
